[package]
name = "schema_ui_system"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
] }
anyhow = "1.0"
dotenv = "0.15"

# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
axum-test = "15.7"

# Example binaries
[[example]]
name = "simple_render"
path = "examples/simple_render.rs"

[dev-dependencies]
tokio-test = "0.4"
